--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
     
     <script 
