--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="software portfolio for jaxon southern"
+      content="Software portfolio for Jaxon Southern"
     />
+
+    <meta property="og:title" content="Jaxon Southern | Software Developer" />
+    <meta property="og:description" content="Explore Jaxon Southern's portfolio in software development, featuring projects, skills, and a short bio." />
+    <meta property="og:url" content="https://jaxonsouthern.com" />
+    <meta property="og:type" content="website" />
+
     <base href="/" />    
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -25,7 +31,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+25+Charted&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>portfolio</title>
+    <title>Jaxon Southern | Software Developer</title>
   </head>
   <body>
     <noscript></noscript>
@@ -35,6 +41,20 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
       crossorigin="anonymous">
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Jaxon Southern",
+        "jobTitle": "Software Developer",
+        "url": "https://jaxonsouthern.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/jaxonsouthern/",
+          "https://github.com/jaxdsout/"
+        ]
+      }
     </script>
   </body>
 </html>
