--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="Explore Jaxon Southern's portfolio in software development, featuring projects, skills, and a short bio." />
     <meta property="og:url" content="https://jaxonsouthern.com" />
     <meta property="og:type" content="website" />
+    <meta name="robots" content="index, follow" />
 
     <base href="/" />    
   
